# tcp-udp-distributed-system

./: .gitignore  demo.sh  requirements.txt  run-gateway.sh  run-multi-sensors.sh  run-single-temp-sensor.sh  run.sh
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/ds/distributedsystems/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/ds/distributedsystems/: ApiService.kt  MainActivity.kt
android/app/src/main/java/com/ds/distributedsystems/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/proto/: sensor_data.proto
android/app/src/main/res/drawable/: droplet_solid.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/ds/distributedsystems/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml  build.rs
rust/proto/: sensor_data.proto
rust/src/: _.rs  device_client.rs  lamp_post.rs  main.rs  temperature_sensor.rs
src/: api.py  gateway.py  run.py  sensor_manager.py
src/devices/: alarm_sensor.py  default_device.py  humidity_sensor.py  semaphore.py  sensor_client.py  tcp_sensor_client.py  temperature_sensor.py  udp_sensor_client.py
src/proto/: sensor_data.proto  sensor_data_pb2.py  sensor_data_pb2_grpc.py
src/rust devices/: Cargo.toml  build.rs  lamp_post.rs
src/sensors/: alarm_sensor.py  humidity_sensor.py  movement_sensor.py  sensor_client.py  tcp_sensor_client.py  temperature_sensor.py  udp_sensor_client.py
